# ollamachat

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONOCIMIENTO_WXPYTHON_ACCESIBLE.md  README.md  pyproject.toml  run_tests.bat  smoke_test.py
.claude/: settings.json
bellbird/: __init__.py  main.py
bellbird/core/: config.py  context_advisor.py  conversation.py  focus.py  html_render.py  keymap.py  llama_client.py  llama_runner.py  logger.py  media.py  model_meta.py  notifier.py  payload.py  permission_manager.py  preset.py  sound_player.py  speech.py  startup.py  status_formatter.py  system_voice.py  text_filters.py  text_utils.py  tool_catalog.py  tool_executor.py  tool_prompt.py  web_fetch.py
bellbird/ui/: _server_mixin.py  _stream_mixin.py  chat_panel.py  find_dialog.py  main_window.py  message_detail_dialog.py  params_panel.py  permission_dialog.py  preferences_dialog.py  url_dialog.py
ollamachat/core/: conversation.py  llama_client.py  llama_runner.py  logger.py  ollama_runner.py  speech.py
ollamachat/ui/: chat_panel.py  main_window.py  params_panel.py  permission_dialog.py
openspec/: .sdd-init-report.md  config.yaml  testing-capabilities.md
scripts/: build_windows.sh  diagnose_tests.ps1  generate_sound_assets.py  run_tests.ps1
tests/: test_version.py
tests/core/: test_config.py  test_context_advisor.py  test_conversation.py  test_file_tools.py  test_focus.py  test_html_render.py  test_html_render_static.py  test_keymap.py  test_llama_client.py  test_llama_runner.py  test_logger.py  test_media.py  test_model_meta.py  test_notifier.py  (+14 more)
(+91 files in other folders)
