[project]
name = "bellbird"
version = "0.4.1"
requires-python = ">=3.12"
dependencies = [
    "wxpython>=4.2",
    "accessible-output2>=0.17",
    "requests>=2.31",
    "markdown>=3.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-xvs --no-header --no-cov-on-fail"
