[project]
name = "bellbird"
version = "0.7.4"
requires-python = ">=3.12"
dependencies = [
    "wxpython>=4.2",
    "accessible-output2>=0.17",
    "requests>=2.31",
    "markdown>=3.5",
    "platformdirs>=4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pywinauto>=0.6.8 ; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-xvs --no-header --no-cov-on-fail"
